rewards refactor: home page structure so spacings are correct

--- a/src/legends/modules/Home/components/UserDataSection/UserDataSection.module.scss
+++ b/src/legends/modules/Home/components/UserDataSection/UserDataSection.module.scss
@@ -1,5 +1,9 @@
 @import '@legends/styles/base.scss';
 
+.pageContent {
+  padding-top: 3rem;
+}
+
 .wrapper {
   .headerWrapper {
     display: flex;
